2013-06-27  Glenn Morris  <rgm@gnu.org>

	* automated/undo-tests.el (undo-test3): Remove test that seems to
	do nothing that the previous one doesn't, except leave a tempfile.

2013-06-26  Glenn Morris  <rgm@gnu.org>

	* automated/info-xref.el: New file.

2013-06-25  Glenn Morris  <rgm@gnu.org>

	* automated/occur-tests.el (occur-test-create): New function.
	Use it to create separate tests for each element, so we run them
	all rather than stopping at the first error.

2013-06-24  Glenn Morris  <rgm@fencepost.gnu.org>

	* automated/occur-tests.el (occur-tests):
	Update for 2013-05-29 change to occur header line.

2013-06-21  Eduard Wiebe  <usenet@pusto.de>

	Test suite for flymake.
	* automated/flymake-tests.el:
	* automated/flymake/warnpred/Makefile
	* automated/flymake/warnpred/test.c
	* automated/flymake/warnpred/test.pl: New files.

2013-06-12  Rüdiger Sonderfeld  <ruediger@c-plusplus.de>

	* automated/reftex-tests.el (reftex-parse-from-file-test): Fix test.

2013-06-12  Rüdiger Sonderfeld  <ruediger@c-plusplus.de>

	* automated/reftex-tests.el: New test suite for reftex.

2013-05-31  Dmitry Gutov  <dgutov@yandex.ru>

	* automated/ruby-mode-tests.el: New tests, for percent literals
	and expression expansion.

2013-05-29  Leo Liu  <sdl.web@gmail.com>

	* indent/octave.m: Tweak.

2013-05-26  Aidan Gauland  <aidalgol@amuri.net>

	* tests/eshell.el: Rewrite tests using ERT.

2013-05-25  Leo Liu  <sdl.web@gmail.com>

	* indent/octave.m: Add tests for %!, # and ### comments.

2013-05-23  Kenichi Handa  <handa@gnu.org>

	* automated/decoder-tests.el: New file.

2013-05-19  Dmitry Gutov  <dgutov@yandex.ru>

	* indent/ruby.rb: Add multiline regexp example.

	* automated/ruby-mode-tests.el (ruby-heredoc-highlights-interpolations)
	(ruby-regexp-skips-over-interpolation)
	(ruby-regexp-continues-till-end-when-unclosed)
	(ruby-regexp-can-be-multiline)
	(ruby-interpolation-inside-percent-literal): New tests.

2013-05-08  Stefan Monnier  <monnier@iro.umontreal.ca>
